objects/HAPI_Product_Load__c.object
<CustomObject>
    <fields>
        <fullName>Category_List__c</fullName>
        <label>Category List</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Category_Operation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Category Operation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Composite_Products_List__c</fullName>
        <label>Composite Products List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Composite_Products_Operation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Composite Products Operation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Fully_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Fully Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Partially_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Partially Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FIN_BUSINESS_CODE__c</fullName>
        <label>FIN_BUSINESS_CODE</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIN_RESP_CODE__c</fullName>
        <label>FIN_RESP_CODE</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIN_SUB_BUSINESS_CODE__c</fullName>
        <label>FIN_SUB_BUSINESS_CODE</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Featured_Products_List__c</fullName>
        <label>Featured Products List</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Featured_Products_Operation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Featured Products Operation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Time__c</fullName>
        <label>Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>License_Name__c</fullName>
        <label>License Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Long_Desc_RT__c</fullName>
        <label>Long Desc RT</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Long_Desc__c</fullName>
        <label>Long Desc</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <label>Package</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Class_Code__c</fullName>
        <label>Product Class Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Data_Operation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Data Operation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Media_List__c</fullName>
        <label>Product Media List</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Media_Operation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Media Operation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Range__c</fullName>
        <label>Product Range</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Reference_Name__c</fullName>
        <label>Product Reference Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_SKU__c</fullName>
        <label>Product SKU</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Status__c</fullName>
        <label>Product Status</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Version__c</fullName>
        <label>Product Version</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Weight__c</fullName>
        <label>Product Weight</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QSOLType__c</fullName>
        <label>QSOLType</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantityperunit__c</fullName>
        <label>Quantityperunit</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Related_Products_List__c</fullName>
        <label>Related Products List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_Products_Operation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Related Products Operation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Short_Desc_RT__c</fullName>
        <label>Short Desc RT</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Short_Desc__c</fullName>
        <label>Short Desc</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Spec_List__c</fullName>
        <label>Spec List</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Spec_Operation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spec Operation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stand_Alone_Product__c</fullName>
        <label>Stand Alone Product</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Storefront__c</fullName>
        <label>Storefront</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <label>Unit of Measure</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_Display__c</fullName>
        <label>Version Display</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isIAMProvisioningRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isIAMProvisioningRequired</label>
        <type>Checkbox</type>
    </fields>
    <label>HAPI Product Load</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Version__c</columns>
        <columns>NAME</columns>
        <columns>Product_SKU__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Data_Fully_Uploaded__c</columns>
        <columns>Message__c</columns>
        <columns>Data_Partially_Uploaded__c</columns>
        <columns>Error_Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Version__c</field>
            <operation>equals</operation>
            <value>JN001</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Version_Filter</fullName>
        <columns>Version__c</columns>
        <columns>NAME</columns>
        <columns>Product_SKU__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Data_Fully_Uploaded__c</columns>
        <columns>Data_Partially_Uploaded__c</columns>
        <columns>Message__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Related_Products_Operation__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Related_Products_List__c</columns>
        <columns>Featured_Products_Operation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Version__c</field>
            <operation>contains</operation>
            <value>V1</value>
        </filters>
        <label>Version Filter</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>HAPI-PROD-{0000000000}</displayFormat>
        <label>HAPI Product Load Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HAPI Product Loads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>